[gd_scene load_steps=2 format=3 uid="uid://tubld1hhwoc"]

[ext_resource type="Script" path="res://src/common/area/area.gd" id="1_dx6u0"]

[node name="Area3D" type="Area3D"]
script = ExtResource("1_dx6u0")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
